Actualizacón de Códigós

--- a/Desarrollo/SGDC/Codificación/MostrarPromociones.html
+++ b/Desarrollo/SGDC/Codificación/MostrarPromociones.html
@@ -1,13 +1,22 @@
+<!--
+..................................................
+    Autor: Holiver Jhunior Ccora Quispe
+    Fecha: 26/05/2023
+    Descripción: Actualización de Código
+..................................................
+-->
+
+
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <meta charset="UTF-8">
         <title>Mostrar Promociones</title>
-        <link rel="stylesheet" href="Requisito8.css">
+        <link rel="stylesheet" href="MostrarPromociones.css">
     </head>
     <body>
         <header>
-            <img src = "Logo.jpeg">
+            <img src = "Recursos/Logo.jpeg" alt="Logo ChickenGO">
             <nav>
                 <ul>
                     <li><a href="#">Carta</a></li>
@@ -20,45 +29,45 @@
             <section>
                 <h2>PROMOCIONES</h2>
                 <div class="menu-item">
-                    <img src="PollitoConPapas.jpg" alt="Hamburguesa">
+                    <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
                     <h3>Pollito con Papas</h3>
                     <p>Deliciosa hamburguesa con carne de res, lechuga, tomate, cebolla y queso.</p>
-                    <p class="price">$5.99</p>
+                    <p class="precio">$5.99</p>
                     <button>Elegir</button>
                 </div>
                 <div class="menu-item">
-                    <img src="PollitoConPapas.jpg" alt="Pizza">
+                    <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
                     <h3>Pollito con Papas</h3>
                     <p>Deliciosa pizza con pepperoni, queso y salsa de tomate.</p>
-                    <p class="price">$7.99</p>
+                    <p class="precio">$7.99</p>
                     <button>Elegir</button>
                 </div>
                 <div class="menu-item">
-                    <img src="PollitoConPapas.jpg" alt="Ensalada">
+                    <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
                     <h3>Pollito con Papas</h3>
                     <p>Ensalada fresca con lechuga, tomate, pepino, zanahoria y aderezo de tu elección.</p>
-                    <p class="price">$4.99</p>
+                    <p class="precio">$4.99</p>
                     <button>Elegir</button>
                 </div>
                 <div class="menu-item">
-                    <img src="PollitoConPapas.jpg" alt="Arroz Chaufa">
+                    <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
                     <h3>Pollito con Papas</h3>
                     <p>Exquisito arroz chaufa de pollo, carne o cerdo.</p>
-                    <p class="price">$10.99</p>
+                    <p class="precio">$10.99</p>
                     <button>Elegir</button>
                 </div>
                 <div class="menu-item">
-                    <img src="PollitoConPapas.jpg" alt="Arroz Chaufa">
+                    <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
                     <h3>Pollito con Papas</h3>
                     <p>Exquisito arroz chaufa de pollo, carne o cerdo.</p>
-                    <p class="price">$10.99</p>
+                    <p class="precio">$10.99</p>
                     <button>Elegir</button>
                 </div>
                 <div class="menu-item">
-                    <img src="PollitoConPapas.jpg" alt="Arroz Chaufa">
+                    <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
                     <h3>Pollito con Papas</h3>
                     <p>Exquisito arroz chaufa de pollo, carne o cerdo.</p>
-                    <p class="price">$10.99</p>
+                    <p class="precio">$10.99</p>
                     <button>Elegir</button>
                 </div>
             </section>
@@ -67,6 +76,6 @@
         <footer>
             <p>Comida a Domicilio - Todos los derechos reservados &copy; 2023</p>
         </footer>
-        <script src="Requisito1.js"></script>
+        <script src="MostrarPromociones.js"></script>
     </body>
 </html>
