--- a/Desarrollo/SGDC/Codificación/IniciarSesion.html
+++ b/Desarrollo/SGDC/Codificación/IniciarSesion.html
@@ -25,7 +25,7 @@
             <div class="items-izq">
                 <img src="Recursos/Logo.jpg" alt="Logo ChickenGO">
                 <a href="#">Carta</a>
-                <a href="#">Promociones</a>
+                <a href="MostrarPromociones.html">Promociones</a>
                 <a href="#">Delivery: <p>01 365 5287</p></a>
             </div>
             <nav>
