--- a/Desarrollo/SGDC/Codificación/MostrarPromociones.html
+++ b/Desarrollo/SGDC/Codificación/MostrarPromociones.html
@@ -5,77 +5,120 @@
     Descripción: Actualización de Código
 ..................................................
 -->
-
+<!--
+..................................................
+    Autor: Holiver Jhunior Ccora Quispe
+    Fecha: 31/05/2023
+    Descripción: Actualización de Código
+..................................................
+-->
 
 <!DOCTYPE html>
-<html lang="es">
+<hmtl lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Mostrar Promociones</title>
-        <link rel="stylesheet" href="MostrarPromociones.css">
+        <title>ChickenGO - Promociones</title>
+        <link rel="stylesheet" type="text/css" href="MostrarPromociones.css">
     </head>
     <body>
         <header>
-            <img src = "Recursos/Logo.jpeg" alt="Logo ChickenGO">
-            <nav>
-                <ul>
-                    <li><a href="#">Carta</a></li>
-                    <li><a href="#">Promociones</a></li>
-                    <li><a href="#">Delivery</a></li>
-                </ul>
-            </nav>
+            <div class="items-izq">
+                <img  src="Recursos/Logo.jpg" alt="Logo ChickenGO">
+                <a href="#">Carta</a>
+                <a href="MostrarPromociones.html">Promociones</a>
+                <a href="#">Delivery: <p>886765423</p></a>
+            </div>
+            <div class = "items-der">
+                <nav>
+                    <ul>
+                        <li><a href="RegistrarUsuario.html"><img src="Recursos/Usuario.jpg" alt="Logo Usuario"></a></li>
+                        <li><a href="RegistrarUsuario.html">Ingresa o Registrate</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
+        <hr class="linea-verde">
         <main>
-            <section>
-                <h2>PROMOCIONES</h2>
-                <div class="menu-item">
-                    <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
-                    <h3>Pollito con Papas</h3>
-                    <p>Deliciosa hamburguesa con carne de res, lechuga, tomate, cebolla y queso.</p>
-                    <p class="precio">$5.99</p>
-                    <button>Elegir</button>
+            <div class = "fondo">
+                <nav>
+                    <ul>
+                        <li class="tipo-seccion">
+                            <img src="Recursos/LogoPromociones.jpg" alt="Logo de Promociones"><br>
+                            <a href="#">Promociones</a>
+                        </li>
+                        <li class="tipo-seccion">
+                            <img src="Recursos/LogoPollos.jpg" alt="Logo de Pollos"><br>
+                            <a href="#">Pollos</a>
+                        </li>
+                        <li class="tipo-seccion">
+                            <img src="Recursos/LogoBroaster.jpg" alt="Logo de Broaster"><br>
+                            <a href="#">Broaster</a>
+                        </li>
+                        <li class="tipo-seccion">
+                            <img src="Recursos/LogoEnsalada.jpg" alt="Logo de Ensaladas"><br>
+                            <a href="#">Ensaladas</a>
+                        </li>
+                        <li class="tipo-seccion">
+                            <img src="Recursos/LogoBebidas.jpg" alt="Logo de Bebidas"><br>
+                            <a href="#">Bebidas</a>
+                        </li>
+                        <li class="tipo-seccion">
+                            <img src="Recursos/LogoParrillas.jpg" alt="Logo de Parrillas"><br>
+                            <a href="#">Parrillas</a>
+                        </li>
+                    </ul>
+                </nav>
+                <h1>PROMOCIONES</h1>
+                <div class="promociones">
+                    <div class="menu-item">
+                        <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
+                        <h3>Pollito con Papas</h3>
+                        <p>Delicioso Pollito con Papas.</p>
+                        <p class="precio">$5.99</p>
+                        <button>Elegir</button>
+                    </div>
+                    <div class="menu-item">
+                        <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
+                        <h3>Pollito con Papas</h3>
+                        <p>Delicioso Pollito con Papas.</p>
+                        <p class="precio">$7.99</p>
+                        <button>Elegir</button>
+                    </div>
+                    <div class="menu-item">
+                        <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
+                        <h3>Pollito con Papas</h3>
+                        <p>Delicioso Pollito con Papas.</p>
+                        <p class="precio">$4.99</p>
+                        <button>Elegir</button>
+                    </div>
+                    <div class="menu-item">
+                        <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
+                        <h3>Pollito con Papas</h3>
+                        <p>Delicioso Pollito con Papas.</p>
+                        <p class="precio">$10.99</p>
+                        <button>Elegir</button>
+                    </div>
+                    <div class="menu-item">
+                        <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
+                        <h3>Pollito con Papas</h3>
+                        <p>Delicioso Pollito con Papas.</p>
+                        <p class="precio">$10.99</p>
+                        <button>Elegir</button>
+                    </div>
+                    <div class="menu-item">
+                        <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
+                        <h3>Pollito con Papas</h3>
+                        <p>Delicioso Pollito con Papas.</p>
+                        <p class="precio">$10.99</p>
+                        <button>Elegir</button>
+                    </div>
                 </div>
-                <div class="menu-item">
-                    <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
-                    <h3>Pollito con Papas</h3>
-                    <p>Deliciosa pizza con pepperoni, queso y salsa de tomate.</p>
-                    <p class="precio">$7.99</p>
-                    <button>Elegir</button>
-                </div>
-                <div class="menu-item">
-                    <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
-                    <h3>Pollito con Papas</h3>
-                    <p>Ensalada fresca con lechuga, tomate, pepino, zanahoria y aderezo de tu elección.</p>
-                    <p class="precio">$4.99</p>
-                    <button>Elegir</button>
-                </div>
-                <div class="menu-item">
-                    <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
-                    <h3>Pollito con Papas</h3>
-                    <p>Exquisito arroz chaufa de pollo, carne o cerdo.</p>
-                    <p class="precio">$10.99</p>
-                    <button>Elegir</button>
-                </div>
-                <div class="menu-item">
-                    <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
-                    <h3>Pollito con Papas</h3>
-                    <p>Exquisito arroz chaufa de pollo, carne o cerdo.</p>
-                    <p class="precio">$10.99</p>
-                    <button>Elegir</button>
-                </div>
-                <div class="menu-item">
-                    <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
-                    <h3>Pollito con Papas</h3>
-                    <p>Exquisito arroz chaufa de pollo, carne o cerdo.</p>
-                    <p class="precio">$10.99</p>
-                    <button>Elegir</button>
-                </div>
-            </section>
+            </div>
         </main>
-        <br><br><br>
+        <hr class="linea-verde">
         <footer>
-            <p>Comida a Domicilio - Todos los derechos reservados &copy; 2023</p>
+            <p>Pollería ChickenGO - Todos los derechos reservados &copy; 2023</p>
         </footer>
         <script src="MostrarPromociones.js"></script>
     </body>
-</html>
+</hmtl>
