--- a/Desarrollo/SGDC/Codificación/RegistrarUsuario.html
+++ b/Desarrollo/SGDC/Codificación/RegistrarUsuario.html
@@ -18,7 +18,7 @@
             <div class="items-izq">
                 <img  src="Recursos/Logo.jpg" alt="Logo OpenFood">
                 <a href="#">Carta</a>
-                <a href="#">Promociones</a>
+                <a href="MostrarPromociones.html">Promociones</a>
                 <a href="#">Delivery: <p>01 365 5287</p></a>
             </div>
             <nav>
