Actualización Código RegistrarUsuario

--- a/Desarrollo/SGDC/Codificación/RegistrarUsuario.html
+++ b/Desarrollo/SGDC/Codificación/RegistrarUsuario.html
@@ -21,12 +21,14 @@
                 <a href="MostrarPromociones.html">Promociones</a>
                 <a href="#">Delivery: <p>01 365 5287</p></a>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="IniciarSesion.html"><img src="Recursos/Usuario.jpg"></a></li>
-                    <li><a href="IniciarSesion.html">Ingresa o Registrate</a></li>
-                </ul>
-            </nav>
+            <div class="items-der">
+                <nav>
+                    <ul>
+                        <li><a href="IniciarSesion.html"><img src="Recursos/Usuario.jpg"></a></li>
+                        <li><a href="IniciarSesion.html">Ingresa o Registrate</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <hr class="linea-verde">
         <main>
