--- a/Desarrollo/SGDC/Codificación/RegistrarUsuario.html
+++ b/Desarrollo/SGDC/Codificación/RegistrarUsuario.html
@@ -11,7 +11,7 @@
     <head>
         <meta charset="UTF-8">
         <title>ChickenGO - Registrar Cuenta del Cliente</title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="RegistrarUsuario.css">
     </head>
     <body>
         <header>
@@ -64,6 +64,6 @@
         <footer>
             <p>Pollería ChickenGO - Todos los derechos reservados &copy; 2023</p>
         </footer>
-        <script src="main.js"></script>
+        <script src="RegistrarUsuario.js"></script>
     </body>
 </html>
