--- a/Desarrollo/SGDC/Codificación/Backend/src/public/index.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/index.html
@@ -25,7 +25,7 @@
     <head>
         <meta charset="UTF-8">
         <title>ChickenGO - Iniciar Sesión</title>
-        <link rel="stylesheet" type="text/css" href="IniciarSesion.css">
+        <link rel="stylesheet" type="text/css" href="./css/IniciarSesion.css">
     </head>
     <body>
         <header>
@@ -38,8 +38,8 @@
             <div class="items-der">
                 <nav>
                     <ul>
-                        <li><a href="RegistrarUsuario.html"><img src="Recursos/Usuario.jpg"></a></li>
-                        <li><a href="RegistrarUsuario.html">Ingresa o Registrate</a></li>
+                        <li><a href="Registro.html"><img src="Recursos/Usuario.jpg"></a></li>
+                        <li><a href="Registro.html">Ingresa o Registrate</a></li>
                     </ul>
                 </nav>
             </div>
