--- a/Desarrollo/SGDC/Codificación/IniciarSesion.html
+++ b/Desarrollo/SGDC/Codificación/IniciarSesion.html
@@ -56,7 +56,7 @@
                         <label for="password">Contraseña:</label>
                         <input type="password" id="password" name="password" required>
                         <br>
-                        <button class="boton_iniciar" type="submit">Iniciar Sesión</button>
+                        <button class="boton_iniciar" type="submit"><a href="MostrarPromociones.html"></a>Iniciar Sesión</button>
                     </form><br>
                     <div class="continuar-con">
                         <p>Continuar con</p>
