--- a/Desarrollo/SGDC/Codificación/Backend/src/public/index.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/index.html
@@ -49,7 +49,7 @@
             <div class = "imagen_fondo">
                 <div class ="contenido">
                     <h1>INICIA SESIÓN</h1>
-                    <form id="registrationForm">
+                    <form id="loginForm">
                         <label for="celular">Celular:</label>
                         <input type="text" id="celular" name="celular" required>
                         <br>
@@ -69,6 +69,6 @@
         <footer>
             <p>Pollería ChickenGO - Todos los derechos reservados &copy; 2023</p>
         </footer>
-        <script src="IniciarSesion.js"></script>
+        <script src="./js/IniciarSesion.js"></script>
     </body>
 </html>
