--- a/Desarrollo/SGDC/Codificación/RegistrarUsuario.html
+++ b/Desarrollo/SGDC/Codificación/RegistrarUsuario.html
@@ -17,7 +17,7 @@
         <header>
             <div class="items-izq">
                 <img  src="Recursos/Logo.jpg" alt="Logo OpenFood">
-                <a href="#">Carta</a>
+                <a href="MostrarPromociones.html#opcion-pollos">Carta</a>
                 <a href="MostrarPromociones.html">Promociones</a>
                 <a href="#">Delivery: <p>01 365 5287</p></a>
             </div>
