arreglando errores de ruta

--- a/Desarrollo/SGDC/Codificación/Backend/src/public/Registro.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/Registro.html
@@ -55,7 +55,7 @@
                         <button class="boton_registrar" type="submit">Registrar</button>
                         <div class="tienes-cuenta">
                             <p>¿Ya tienes una cuenta?</p>
-                            <a href="IniciarSesion.html">INICIA SESIÓN</a>
+                            <a href="index.html">INICIA SESIÓN</a>
                         </div>
                     </form><br><br>
                 </div>
