--- a/Desarrollo/SGDC/Codificación/Backend/src/public/AdministrarPolleria.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/AdministrarPolleria.html
@@ -10,7 +10,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>ChickenGO - Panel de Administración</title>
-		<link rel="stylesheet" href="AdministrarPolleria.css">
+		<link rel="stylesheet" href="./css/AdministrarPolleria.css">
 		<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 	</head>
 	<body>
@@ -65,6 +65,6 @@
 		<footer>
 			<p>Pollería ChickenGO - Todos los derechos reservados &copy; 2023</p>
 		</footer>
-		<script src="AdministrarPolleria.js"></script>
+		<script src="./js/AdministrarPolleria.js"></script>
 	</body>
 </html>
