--- a/Desarrollo/SGDC/Codificación/Backend/src/public/MostrarPromociones.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/MostrarPromociones.html
@@ -18,7 +18,7 @@
     <head>
         <meta charset="UTF-8">
         <title>ChickenGO - Promociones</title>
-        <link rel="stylesheet" type="text/css" href="MostrarPromociones.css">
+        <link rel="stylesheet" type="text/css" href="./css/MostrarPromociones.css">
     </head>
     <body>
         <header>
@@ -119,6 +119,6 @@
         <footer>
             <p>Pollería ChickenGO - Todos los derechos reservados &copy; 2023</p>
         </footer>
-        <script src="MostrarPromociones.js"></script>
+        <script src="./js/MostrarPromociones.js"></script>
     </body>
 </hmtl>
