Actualización de Códigos

--- a/Desarrollo/SGDC/Codificación/PaginaPrincipal.html
+++ b/Desarrollo/SGDC/Codificación/PaginaPrincipal.html
@@ -19,6 +19,7 @@
             <div class = "items-der">
                 <nav>
                     <ul>
+                        <li><a href="#">Sedes</a></li>
                         <li><a href="RegistrarUsuario.html"><img src="Recursos/Usuario.jpg" alt="Logo Usuario"></a></li>
                         <li><a href="RegistrarUsuario.html">Ingresa o Registrate</a></li>
                     </ul>
