Actualización de Código

--- a/Desarrollo/SGDC/Codificación/SedesPolleria.html
+++ b/Desarrollo/SGDC/Codificación/SedesPolleria.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <hmtl lang="es">
 
     <head>
         <meta charset="UTF-8">
         <title>ChickenGO - Promociones</title>
-        <link rel="stylesheet" type="text/css" href="PaginaPrincipal.css">
+        <link rel="stylesheet" type="text/css" href="SedesPolleria.css">
     </head>
     
     <body>
@@ -29,21 +28,31 @@
         <hr class="linea-verde">
         <main>
             <div class = "fondo">
-                <div id="principal">
-                    <div id="pollo-principal">
-                        <img src="Recursos/PollloJB.jpg" alt="Pollo Principal">
+                <h1>SEDES DE CHICKENGO</h1>
+                <div class="sedes-polleria">
+                    <div class="sede">
+                        <h2>LINCE</h2>
+                        <img src="Recursos/lince.jpg">
                     </div>
-                
-                    <div id="descripcion-principal">
-                        <div id="titulos-principal">
-                            <p><strong>PRUEBA NUESTROS DELICIOSOS <br> POLLOS A LA BRASA</strong></p>
-                            <!--<p><strong>POLLOS A LA BRASA</strong></p>-->
-                        </div>
-                        <div id="botones-principal">
-                            <a href="RegistrarUsuario.html"><button>Registrarse</button></a><br>
-                            <a href="IniciarSesion.html"><button>Iniciar Sesión</button></a><br>
-                            <a href="MostrarPromociones.html#opcion-pollos"><button>Ver Carta</button></a>
-                        </div>
+                    <div class="sede">
+                        <h2>JESÚS MARÍA</h2>
+                        <img src="Recursos/lince.jpg">
+                    </div>
+                    <div class="sede">
+                        <h2>LA VICTORIA</h2>
+                        <img src="Recursos/lince.jpg">
+                    </div>
+                    <div class="sede">
+                        <h2>SAN ISIDRO</h2>
+                        <img src="Recursos/lince.jpg">
+                    </div>
+                    <div class="sede">
+                        <h2>SAN MIGUEL</h2>
+                        <img src="Recursos/lince.jpg">
+                    </div>
+                    <div class="sede">
+                        <h2>LA MOLINA</h2>
+                        <img src="Recursos/lince.jpg">
                     </div>
                 </div>
             </div>
@@ -52,6 +61,6 @@
         <footer>
             <p>Pollería ChickenGO - Todos los derechos reservados &copy; 2023</p>
         </footer>
-        <script src="MostrarPromociones.js"></script>
+        <script src=""></script>
     </body>
 </hmtl>
