--- a/Desarrollo/SGDC/Codificación/MostrarPromociones.html
+++ b/Desarrollo/SGDC/Codificación/MostrarPromociones.html
@@ -38,6 +38,7 @@
             <div class = "items-der">
                 <nav>
                     <ul>
+                        <li><a href="SedesPolleria.html">Sedes</a></li>
                         <li><a href="RegistrarUsuario.html"><img src="Recursos/Usuario.jpg" alt="Logo Usuario"></a></li>
                         <li><a href="RegistrarUsuario.html">Ingresa o Registrate</a></li>
                     </ul>
