--- a/Desarrollo/SGDC/Codificación/DetallesPedido.html
+++ b/Desarrollo/SGDC/Codificación/DetallesPedido.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <hmtl lang="es">
 
     <head>
         <meta charset="UTF-8">
         <title>ChickenGO - Promociones</title>
-        <link rel="stylesheet" type="text/css" href="PaginaPrincipal.css">
+        <link rel="stylesheet" type="text/css" href="DetallesPedido.css">
     </head>
     
     <body>
@@ -29,21 +28,14 @@
         <hr class="linea-verde">
         <main>
             <div class = "fondo">
-                <div id="principal">
-                    <div id="pollo-principal">
-                        <img src="Recursos/PolloJB.jpg" alt="Pollo Principal">
-                    </div>
-                
-                    <div id="descripcion-principal">
-                        <div id="titulos-principal">
-                            <p><strong>PRUEBA NUESTROS DELICIOSOS <br> POLLOS A LA BRASA</strong></p>
-                        </div>
-                        <div id="botones-principal">
-                            <a href="RegistrarUsuario.html"><button>Registrarse</button></a><br>
-                            <a href="IniciarSesion.html"><button>Iniciar Sesión</button></a><br>
-                            <a href="MostrarPromociones.html#opcion-pollos"><button>Ver Carta</button></a>
-                        </div>
-                    </div>
+                <div class="lista-detalles-producto">
+                    <h2>USTED ELIGIÓ: </h2>
+                    <img src="Recursos/PollitoConPapas.jpg" alt="Producto elegido">
+                    <p>Nombre: <span id="nombrePizza"></span></p>
+                    <p>Tamaño: <span id="tamanioPizza"></span></p>
+                    <p>Precio: <span id="precioPizza"></span></p>
+                    <button class="boton-volver"><a href="CU-0005.html">Confirmar</a></button>
+                    <button class="boton-volver" onclick="removerLocalStorage()"><a href="MostrarPromociones.html">Cancelar</a></button>
                 </div>
             </div>
         </main>
@@ -51,6 +43,6 @@
         <footer>
             <p>Pollería ChickenGO - Todos los derechos reservados &copy; 2023</p>
         </footer>
-        <script src="MostrarPromociones.js"></script>
+        <script src="DetallesPedido.js"></script>
     </body>
 </hmtl>
