Actualización de Código

--- a/Desarrollo/SGDC/Codificación/DetallesPedido.html
+++ b/Desarrollo/SGDC/Codificación/DetallesPedido.html
@@ -34,7 +34,7 @@
                     <p>Nombre: <span id="nombrePizza"></span></p>
                     <p>Tamaño: <span id="tamanioPizza"></span></p>
                     <p>Precio: <span id="precioPizza"></span></p>
-                    <button class="boton-volver"><a href="CU-0005.html">Confirmar</a></button>
+                    <button class="boton-volver"><a href="OpcionEntrega.html">Confirmar</a></button>
                     <button class="boton-volver" onclick="removerLocalStorage()"><a href="MostrarPromociones.html">Cancelar</a></button>
                 </div>
             </div>
