--- a/Desarrollo/SGDC/Codificación/Backend/src/public/FacturaPedido.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/FacturaPedido.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>ChickenGO - Promociones</title>
-        <link rel="stylesheet" type="text/css" href="FacturaPedido.css">
+        <link rel="stylesheet" type="text/css" href="css/FacturaPedido.css">
     </head>
     
     <body onload="mostrarFecha()">
