--- a/Desarrollo/SGDC/Codificación/Backend/src/public/OpcionEntrega.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/OpcionEntrega.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>ChickenGO - Promociones</title>
-        <link rel="stylesheet" type="text/css" href="OpcionEntrega.css">
+        <link rel="stylesheet" type="text/css" href="css/OpcionEntrega.css">
     </head>
     
     <body>
