--- a/Desarrollo/SGDC/Codificación/Backend/src/public/index.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/index.html
@@ -5,9 +5,9 @@
     <head>
         <meta charset="UTF-8">
         <title>ChickenGO - Promociones</title>
-        <link rel="stylesheet" type="text/css" href="PaginaPrincipal.css">
+        <link rel="stylesheet" type="text/css" href="./css/PaginaPrincipal.css">
     </head>
-    
+
     <body>
         <header>
             <div class="items-izq">
