--- a/Desarrollo/SGDC/Codificación/Backend/src/public/FacturaPedido.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/FacturaPedido.html
@@ -82,6 +82,6 @@
         <footer>
             <p>Pollería ChickenGO - Todos los derechos reservados &copy; 2023</p>
         </footer>
-        <script src="FacturaPedido.js"></script>
+        <script src="js/FacturaPedido.js"></script>
     </body>
 </hmtl>
