--- a/Desarrollo/SGDC/Codificación/Backend/src/public/DetallesPedido.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/DetallesPedido.html
@@ -43,6 +43,6 @@
         <footer>
             <p>Pollería ChickenGO - Todos los derechos reservados &copy; 2023</p>
         </footer>
-        <script src="DetallesPedido.js"></script>
+        <script src="js/DetallesPedido.js"></script>
     </body>
 </hmtl>
