--- a/Desarrollo/SGDC/Codificación/Backend/src/public/OpcionEntrega.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/OpcionEntrega.html
@@ -61,6 +61,6 @@
         <footer>
             <p>Pollería ChickenGO - Todos los derechos reservados &copy; 2023</p>
         </footer>
-        <script src="OpcionEntrega.js"></script>
+        <script src="js/OpcionEntrega.js"></script>
     </body>
 </hmtl>
