--- a/Desarrollo/SGDC/Codificación/Backend/src/public/index.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/index.html
@@ -51,6 +51,6 @@
         <footer>
             <p>Pollería ChickenGO - Todos los derechos reservados &copy; 2023</p>
         </footer>
-        <script src="MostrarPromociones.js"></script>
+        <script src="js/PaginaPrincipal.js"></script>
     </body>
 </hmtl>
