--- a/Desarrollo/SGDC/Codificación/Backend/src/public/FacturaPedido.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/FacturaPedido.html
@@ -10,7 +10,7 @@
     <body onload="mostrarFecha()">
         <header>
             <div class="items-izq">
-                <a href="PaginaPrincipal.html"><img  src="Recursos/Logo.jpg" alt="Logo ChickenGO"></a>
+                <a href="PaginaPrincipal.html"><img  src="img/Logo.jpg" alt="Logo ChickenGO"></a>
                 <a href="MostrarPromociones.html#opcion-pollos">Carta</a>
                 <a href="MostrarPromociones.html">Promociones</a>
                 <a href="#">Delivery: <p>01 365 5287</p></a>
@@ -19,7 +19,7 @@
                 <nav>
                     <ul>
                         <li><a href="SedesPolleria.html">Sedes</a></li>
-                        <li><a href="RegistrarUsuario.html"><img src="Recursos/Usuario.jpg" alt="Logo Usuario"></a></li>
+                        <li><a href="RegistrarUsuario.html"><img src="img/Usuario.jpg" alt="Logo Usuario"></a></li>
                         <li><a href="RegistrarUsuario.html">Ingresa o Registrate</a></li>
                     </ul>
                 </nav>
@@ -30,7 +30,7 @@
             <div class = "fondo">
                 <div id="factura">
                     <div id="encabezado-factura">
-                        <img src="Recursos/gallo-claudio.png" alt="ChickenGO">
+                        <img src="img/gallo-claudio.png" alt="ChickenGO">
                         <p id="titulo-factura"><strong>Pizzería "OpenFood"</strong></p>
                         <div id="apartado-fecha">
                             <p>Fecha: </p>
