--- a/Desarrollo/SGDC/Codificación/Backend/src/public/MostrarPromociones.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/MostrarPromociones.html
@@ -23,7 +23,7 @@
     <body>
         <header>
             <div class="items-izq">
-                <img  src="Recursos/Logo.jpg" alt="Logo ChickenGO">
+                <img  src="img/Logo.jpg" alt="Logo ChickenGO">
                 <a href="#">Carta</a>
                 <a href="MostrarPromociones.html">Promociones</a>
                 <a href="#">Delivery: <p>886765423</p></a>
@@ -31,7 +31,7 @@
             <div class = "items-der">
                 <nav>
                     <ul>
-                        <li><a href="RegistrarUsuario.html"><img src="Recursos/Usuario.jpg" alt="Logo Usuario"></a></li>
+                        <li><a href="RegistrarUsuario.html"><img src="img/Usuario.jpg" alt="Logo Usuario"></a></li>
                         <li><a href="RegistrarUsuario.html">Ingresa o Registrate</a></li>
                     </ul>
                 </nav>
@@ -43,27 +43,27 @@
                 <nav>
                     <ul>
                         <li class="tipo-seccion">
-                            <img src="Recursos/LogoPromociones.jpg" alt="Logo de Promociones"><br>
+                            <img src="img/LogoPromociones.jpg" alt="Logo de Promociones"><br>
                             <a href="#">Promociones</a>
                         </li>
                         <li class="tipo-seccion">
-                            <img src="Recursos/LogoPollos.jpg" alt="Logo de Pollos"><br>
+                            <img src="img/LogoPollos.jpg" alt="Logo de Pollos"><br>
                             <a href="#">Pollos</a>
                         </li>
                         <li class="tipo-seccion">
-                            <img src="Recursos/LogoBroaster.jpg" alt="Logo de Broaster"><br>
+                            <img src="img/LogoBroaster.jpg" alt="Logo de Broaster"><br>
                             <a href="#">Broaster</a>
                         </li>
                         <li class="tipo-seccion">
-                            <img src="Recursos/LogoEnsalada.jpg" alt="Logo de Ensaladas"><br>
+                            <img src="img/LogoEnsalada.jpg" alt="Logo de Ensaladas"><br>
                             <a href="#">Ensaladas</a>
                         </li>
                         <li class="tipo-seccion">
-                            <img src="Recursos/LogoBebidas.jpg" alt="Logo de Bebidas"><br>
+                            <img src="img/LogoBebidas.jpg" alt="Logo de Bebidas"><br>
                             <a href="#">Bebidas</a>
                         </li>
                         <li class="tipo-seccion">
-                            <img src="Recursos/LogoParrillas.jpg" alt="Logo de Parrillas"><br>
+                            <img src="img/LogoParrillas.jpg" alt="Logo de Parrillas"><br>
                             <a href="#">Parrillas</a>
                         </li>
                     </ul>
@@ -71,42 +71,42 @@
                 <h1>PROMOCIONES</h1>
                 <div class="promociones">
                     <div class="menu-item">
-                        <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
+                        <img src="img/PollitoConPapas.jpg" alt="Producto en Promoción">
                         <h3>Pollito con Papas</h3>
                         <p>Delicioso Pollito con Papas.</p>
                         <p class="precio">$5.99</p>
                         <button>Elegir</button>
                     </div>
                     <div class="menu-item">
-                        <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
+                        <img src="img/PollitoConPapas.jpg" alt="Producto en Promoción">
                         <h3>Pollito con Papas</h3>
                         <p>Delicioso Pollito con Papas.</p>
                         <p class="precio">$7.99</p>
                         <button>Elegir</button>
                     </div>
                     <div class="menu-item">
-                        <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
+                        <img src="img/PollitoConPapas.jpg" alt="Producto en Promoción">
                         <h3>Pollito con Papas</h3>
                         <p>Delicioso Pollito con Papas.</p>
                         <p class="precio">$4.99</p>
                         <button>Elegir</button>
                     </div>
                     <div class="menu-item">
-                        <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
+                        <img src="img/PollitoConPapas.jpg" alt="Producto en Promoción">
                         <h3>Pollito con Papas</h3>
                         <p>Delicioso Pollito con Papas.</p>
                         <p class="precio">$10.99</p>
                         <button>Elegir</button>
                     </div>
                     <div class="menu-item">
-                        <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
+                        <img src="img/PollitoConPapas.jpg" alt="Producto en Promoción">
                         <h3>Pollito con Papas</h3>
                         <p>Delicioso Pollito con Papas.</p>
                         <p class="precio">$10.99</p>
                         <button>Elegir</button>
                     </div>
                     <div class="menu-item">
-                        <img src="Recursos/PollitoConPapas.jpg" alt="Producto en Promoción">
+                        <img src="img/PollitoConPapas.jpg" alt="Producto en Promoción">
                         <h3>Pollito con Papas</h3>
                         <p>Delicioso Pollito con Papas.</p>
                         <p class="precio">$10.99</p>
