--- a/Desarrollo/SGDC/Codificación/Backend/src/public/OpcionEntrega.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/OpcionEntrega.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="items-izq">
-                <a href="PaginaPrincipal.html"><img  src="Recursos/Logo.jpg" alt="Logo ChickenGO"></a>
+                <a href="PaginaPrincipal.html"><img  src="img/Logo.jpg" alt="Logo ChickenGO"></a>
                 <a href="MostrarPromociones.html#opcion-pollos">Carta</a>
                 <a href="MostrarPromociones.html">Promociones</a>
                 <a href="#">Delivery: <p>01 365 5287</p></a>
@@ -19,7 +19,7 @@
                 <nav>
                     <ul>
                         <li><a href="SedesPolleria.html">Sedes</a></li>
-                        <li><a href="RegistrarUsuario.html"><img src="Recursos/Usuario.jpg" alt="Logo Usuario"></a></li>
+                        <li><a href="RegistrarUsuario.html"><img src="img/Usuario.jpg" alt="Logo Usuario"></a></li>
                         <li><a href="RegistrarUsuario.html">Ingresa o Registrate</a></li>
                     </ul>
                 </nav>
@@ -52,7 +52,7 @@
                 
                 <div id="opcion-entrega-tienda">
                     <p><strong>Listo, su pedido está siendo preparado !!</strong></p>
-                    <img src="Recursos/pollo-animado.png" alt="Pollo Animado"><br>
+                    <img src="img/pollo-animado.png" alt="Pollo Animado"><br>
                     <button class="boton-continuar" type="submit"><a href="FacturaPedido.html">Continuar</a></button>
                 </div>
             </div>
