--- a/Desarrollo/SGDC/Codificación/Backend/src/public/index.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="items-izq">
-                <a href="PaginaPrincipal.html"><img  src="Recursos/Logo.jpg" alt="Logo ChickenGO"></a>
+                <a href="PaginaPrincipal.html"><img  src="img/Logo.jpg" alt="Logo ChickenGO"></a>
                 <a href="MostrarPromociones.html#opcion-pollos">Carta</a>
                 <a href="MostrarPromociones.html">Promociones</a>
                 <a href="#">Delivery: <p>01 365 5287</p></a>
@@ -20,7 +20,7 @@
                 <nav>
                     <ul>
                         <li><a href="SedesPolleria.html">Sedes</a></li>
-                        <li><a href="RegistrarUsuario.html"><img src="Recursos/Usuario.jpg" alt="Logo Usuario"></a></li>
+                        <li><a href="RegistrarUsuario.html"><img src="img/Usuario.jpg" alt="Logo Usuario"></a></li>
                         <li><a href="RegistrarUsuario.html">Ingresa o Registrate</a></li>
                     </ul>
                 </nav>
@@ -31,7 +31,7 @@
             <div class = "fondo">
                 <div id="principal">
                     <div id="pollo-principal">
-                        <img src="Recursos/PolloJB.jpg" alt="Pollo Principal">
+                        <img src="img/PolloJB.jpg" alt="Pollo Principal">
                     </div>
                 
                     <div id="descripcion-principal">
