--- a/Desarrollo/SGDC/Codificación/Backend/src/public/AdministrarPolleria.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/AdministrarPolleria.html
@@ -16,7 +16,7 @@
 	<body>
 		<header>
 			<div class="items-izq">
-				<img src="Recursos/Logo.jpg" alt="Logo ChickenGO">
+				<img src="img/Logo.jpg" alt="Logo ChickenGO">
 				<a href="#">Carta</a>
 				<a href="MostrarPromociones.html">Promociones</a>
 				<a href="#">Delivery: <p>01 365 5287</p></a>
@@ -24,7 +24,7 @@
 			<div class="items-der">
 				<nav>
 					<ul>
-						<li><a href="RegistrarUsuario.html"><img src="Recursos/Usuario.jpg"></a></li>
+						<li><a href="RegistrarUsuario.html"><img src="img/Usuario.jpg"></a></li>
 						<li><a href="RegistrarUsuario.html">Ingresa o Registrate</a></li>
 					</ul>
 				</nav>
