--- a/Desarrollo/SGDC/Codificación/Backend/src/public/RegistrarUsuario.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/RegistrarUsuario.html
@@ -16,14 +16,14 @@
     <body>
         <header>
             <div class="items-izq">
-                <img  src="Recursos/Logo.jpg" alt="Logo OpenFood">
+                <img  src="img/Logo.jpg" alt="Logo OpenFood">
                 <a href="#">Carta</a>
                 <a href="#">Promociones</a>
                 <a href="#">Delivery: <p>01 365 5287</p></a>
             </div>
             <nav>
                 <ul>
-                    <li><a href="IniciarSesion.html"><img src="Recursos/Usuario.jpg"></a></li>
+                    <li><a href="IniciarSesion.html"><img src="img/Usuario.jpg"></a></li>
                     <li><a href="IniciarSesion.html">Ingresa o Registrate</a></li>
                 </ul>
             </nav>
