--- a/Desarrollo/SGDC/Codificación/Backend/src/public/IniciarSesion.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/IniciarSesion.html
@@ -30,7 +30,7 @@
     <body>
         <header>
             <div class="items-izq">
-                <img src="Recursos/Logo.jpg" alt="Logo ChickenGO">
+                <img src="img/Logo.jpg" alt="Logo ChickenGO">
                 <a href="#">Carta</a>
                 <a href="MostrarPromociones.html">Promociones</a>
                 <a href="#">Delivery: <p>01 365 5287</p></a>
@@ -38,8 +38,8 @@
             <div class="items-der">
                 <nav>
                     <ul>
-                        <li><a href="Registro.html"><img src="Recursos/Usuario.jpg"></a></li>
-                        <li><a href="Registro.html">Ingresa o Registrate</a></li>
+                        <li><a href="RegistrarUsuario.html"><img src="img/Usuario.jpg"></a></li>
+                        <li><a href="RegistrarUsuario.html">Ingresa o Registrate</a></li>
                     </ul>
                 </nav>
             </div>
