--- a/Desarrollo/SGDC/Codificación/Backend/src/public/RegistrarUsuario.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/RegistrarUsuario.html
@@ -17,8 +17,8 @@
         <header>
             <div class="items-izq">
                 <img src="img/Logo.jpg" alt="Logo OpenFood">
-                <a href="#">Carta</a>
-                <a href="#">Promociones</a>
+                <a href="MostrarPromociones.html">Carta</a>
+                <a href="MostrarPromociones.html">Promociones</a>
                 <a href="#">Delivery: <p>01 365 5287</p></a>
             </div>
             <nav>
