Actualización de Código

--- a/Desarrollo/SGDC/Codificación/DetallesPedido.html
+++ b/Desarrollo/SGDC/Codificación/DetallesPedido.html
@@ -30,9 +30,8 @@
                 <div class="lista-detalles-producto">
                     <h2>USTED ELIGIÓ: </h2>
                     <img src="Recursos/PollitoConPapas.jpg" alt="Producto elegido">
-                    <p>Nombre: <span id="nombrePizza"></span></p>
-                    <p>Tamaño: <span id="tamanioPizza"></span></p>
-                    <p>Precio: <span id="precioPizza"></span></p>
+                    <p>Nombre: <span id="nombreProducto"></span></p>
+                    <p>Precio: <span id="precioProducto"></span></p>
                     <button class="boton-volver"><a href="OpcionEntrega.html">Confirmar</a></button>
                     <button class="boton-volver" onclick="removerLocalStorage()"><a href="MostrarPromociones.html">Cancelar</a></button>
                 </div>
