--- a/Desarrollo/SGDC/Codificación/Backend/src/public/FacturaPedido.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/FacturaPedido.html
@@ -10,7 +10,7 @@
     <body onload="mostrarFecha()">
         <header>
             <div class="items-izq">
-                <a href="PaginaPrincipal.html"><img  src="img/Logo.jpg" alt="Logo ChickenGO"></a>
+                <a href="index.html"><img  src="img/Logo.jpg" alt="Logo ChickenGO"></a>
                 <a href="MostrarPromociones.html#opcion-pollos">Carta</a>
                 <a href="MostrarPromociones.html">Promociones</a>
                 <a href="#">Delivery: <p>01 365 5287</p></a>
