--- a/Desarrollo/SGDC/Codificación/Backend/src/public/AdministrarPolleria.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/AdministrarPolleria.html
@@ -16,7 +16,7 @@
 	<body>
 		<header>
 			<div class="items-izq">
-				<img src="img/Logo.jpg" alt="Logo ChickenGO">
+				<a href="index.html"><img  src="img/Logo.jpg" alt="Logo ChickenGO"></a>
 				<a href="#">Carta</a>
 				<a href="MostrarPromociones.html">Promociones</a>
 				<a href="#">Delivery: <p>01 365 5287</p></a>
