--- a/Desarrollo/SGDC/Codificación/RegistrarUsuario.html
+++ b/Desarrollo/SGDC/Codificación/RegistrarUsuario.html
@@ -16,8 +16,8 @@
     <body>
         <header>
             <div class="items-izq">
-                <a href="PaginaPrincipal.html"><img  src="Recursos/Logo.jpg" alt="Logo ChickenGO"></a>
-                <a href="MostrarPromociones.html#opcion-pollos">Carta</a>
+                <img  src="Recursos/Logo.jpg" alt="Logo OpenFood">
+                <a href="#">Carta</a>
                 <a href="MostrarPromociones.html">Promociones</a>
                 <a href="#">Delivery: <p>01 365 5287</p></a>
             </div>
