--- a/Desarrollo/SGDC/Codificación/Backend/src/public/index.html
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/index.html
@@ -1,74 +1,69 @@
 <!--
 ..................................................
     Autor: Holiver Jhunior Ccora Quispe
-    Fecha: 26/05/2023
-    Descripción: Actualización de Código
-..................................................
--->
-<!--
-..................................................
-    Autor: Holiver Jhunior Ccora Quispe
     Fecha: 28/05/2023
-    Descripción: Actualización de Código
-..................................................
--->
-<!--
-..................................................
-    Autor: Holiver Jhunior Ccora Quispe
-    Fecha: 31/05/2023
-    Descripción: Actualización de Código
+    Descripción: Creación de Código
 ..................................................
 -->
 
 <!DOCTYPE html>
-<html lang = "es">
+<html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>ChickenGO - Iniciar Sesión</title>
-        <link rel="stylesheet" type="text/css" href="./css/IniciarSesion.css">
+        <title>ChickenGO - Registrar Cuenta del Cliente</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
         <header>
             <div class="items-izq">
-                <img src="Recursos/Logo.jpg" alt="Logo ChickenGO">
+                <img  src="Recursos/Logo.jpg" alt="Logo OpenFood">
                 <a href="#">Carta</a>
-                <a href="MostrarPromociones.html">Promociones</a>
+                <a href="#">Promociones</a>
                 <a href="#">Delivery: <p>01 365 5287</p></a>
             </div>
-            <div class="items-der">
-                <nav>
-                    <ul>
-                        <li><a href="Registro.html"><img src="Recursos/Usuario.jpg"></a></li>
-                        <li><a href="Registro.html">Ingresa o Registrate</a></li>
-                    </ul>
-                </nav>
-            </div>
+            <nav>
+                <ul>
+                    <li><a href="IniciarSesion.html"><img src="Recursos/Usuario.jpg"></a></li>
+                    <li><a href="IniciarSesion.html">Ingresa o Registrate</a></li>
+                </ul>
+            </nav>
         </header>
         <hr class="linea-verde">
         <main>
             <div class = "imagen_fondo">
                 <div class ="contenido">
-                    <h1>INICIA SESIÓN</h1>
-                    <form id="loginForm">
+                    <h1>REGISTRATE</h1>
+                    <form id="registrationForm">
+                        <label for="name">Nombres:</label>
+                        <input type="text" id="name" name="name" required>
+                        <br>
+                        <label for="apellidos">Apellidos:</label>
+                        <input type="text" id="apellidos" name="apellidos" required>
+                        <br>
                         <label for="celular">Celular:</label>
                         <input type="text" id="celular" name="celular" required>
+                        <br>
+                        <label for="direccion">Dirección:</label>
+                        <input type="text" id="direccion" name="direccion" required>
                         <br>
                         <label for="password">Contraseña:</label>
                         <input type="password" id="password" name="password" required>
                         <br>
-                        <button class="boton_iniciar" type="submit"><a href="MostrarPromociones.html">Iniciar Sesión</a></button>
-                    </form><br>
-                    <div class="continuar-con">
-                        <p>Continuar con</p>
-                        <button class="boton-google">Google</button><br><br>
-                        <button class="boton-facebook">Facebook</button>
-                    </div><br><br>
+                        <label for="rep-password">Repetir Contraseña:</label>
+                        <input type="password" id="rep-password" name="rep-password" required>
+                        <br>
+                        <button class="boton_registrar" type="submit">Registrar</button>
+                        <div class="tienes-cuenta">
+                            <p>¿Ya tienes una cuenta?</p>
+                            <a href="IniciarSesion.html">INICIA SESIÓN</a>
+                        </div>
+                    </form><br><br>
                 </div>
             </div>
         </main><hr class="linea-verde">
         <footer>
             <p>Pollería ChickenGO - Todos los derechos reservados &copy; 2023</p>
         </footer>
-        <script src="./js/IniciarSesion.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
