--- a/Desarrollo/SGDC/Codificación/IniciarSesion.html
+++ b/Desarrollo/SGDC/Codificación/IniciarSesion.html
@@ -30,8 +30,8 @@
     <body>
         <header>
             <div class="items-izq">
-                <a href="PaginaPrincipal.html"><img  src="Recursos/Logo.jpg" alt="Logo ChickenGO"></a>
-                <a href="MostrarPromociones.html#opcion-pollos">Carta</a>
+                <img src="Recursos/Logo.jpg" alt="Logo ChickenGO">
+                <a href="#">Carta</a>
                 <a href="MostrarPromociones.html">Promociones</a>
                 <a href="#">Delivery: <p>01 365 5287</p></a>
             </div>
@@ -56,7 +56,7 @@
                         <label for="password">Contraseña:</label>
                         <input type="password" id="password" name="password" required>
                         <br>
-                        <button class="boton_iniciar" type="submit"><a href="MostrarPromociones.html"></a>Iniciar Sesión</button>
+                        <button class="boton_iniciar" type="submit">Iniciar Sesión</button>
                     </form><br>
                     <div class="continuar-con">
                         <p>Continuar con</p>
