Organización de Documentos

--- a/Desarrollo/SGDC/Codificación/Frontend/SGDC_MR1/PaginaPrincipal.html
+++ b/Desarrollo/SGDC/Codificación/Frontend/SGDC_MR1/PaginaPrincipal.html
@@ -35,7 +35,7 @@
                 
                     <div id="descripcion-principal">
                         <div id="titulos-principal">
-                            <p><strong>PRUEBA NUESTROS DELICIOSOS <br> POLLOS A LA BRASA</strong></p>
+                            <p><strong>PRUEBA NUESTRAS DELICIOSAS PIZZAS</strong></p>
                         </div>
                         <div id="botones-principal">
                             <a href="RegistrarUsuario.html"><button>Registrarse</button></a><br>
